hackerrank Monthlyb Preparation + nokia/ocado interview questions #week1 flipping bits, count positive/negative/0